# sentiment-pulse

./: .gitignore  Dockerfile  README.md  README_LOCAL.md  README_YOUTUBE.md  main.py  pyproject.toml  requirements.txt  test_settings.py
backend/: main.py
backend/adapters/: youtube.py
backend/api/: routes.py
backend/jobs/: collect_youtube.py
backend/models/: config.py
backend/pipeline/: normalize.py
dashapp/: app.py
dashapp/assets/: styles.css
dashapp/components/: charts.py  tables.py
data/agg/: daily.json
data/raw/2025-10-29/: youtube.ndjson
data/raw/2025-11-05/: youtube.ndjson
data/seeds/: youtube_demo.ndjson
tests/: test_youtube_adapter.py
