[project]
name = "sentiment-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic-settings>=2.11.0",
    "responses>=0.25.8",
]
